# metadata_extractor

./: .env.example  README.md  classify_document_type_and_extract_data.py  extract_metadata.py  extraction_using_llm.py  generate_meta_field_description_and_alias.py  main.py  ocr_document.py  paddle_ocr_test.py  pyproject.toml
